H1: Homework -> Hand-in

--- a/YEAR2/SEM1/SVCDE/H1/homework.tex
+++ b/YEAR2/SEM1/SVCDE/H1/homework.tex
@@ -9,7 +9,7 @@
 \usepackage{changepage}
 \geometry{tmargin=2cm, bmargin=3cm}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\title{SVCDE: Homework 1}
+\title{SVCDE: Hand-in 1}
 \author{Franz Miltz (UNN: S1971811)}
 \newcommand*\lneg[1]{\overline{#1}}
 \newcommand{\R}{\mathbb{R}}
