--- a/YEAR2/SEM1/ICS/notes/notes.tex
+++ b/YEAR2/SEM1/ICS/notes/notes.tex
@@ -9,7 +9,8 @@
 \usepackage{siunitx}
 \usepackage{mathtools}
 \usepackage{hyperref}
-\usepackage{newpxtext}
+\usepackage{fontspec}
+\setmainfont{arial}
 \usepackage{minted}
 \hypersetup{
 	colorlinks,
