SVCDE: H1 fixed kappa

--- a/YEAR2/SEM1/SVCDE/H1/homework.tex
+++ b/YEAR2/SEM1/SVCDE/H1/homework.tex
@@ -31,7 +31,7 @@
 \newcommand{\ih}{\widehat i}
 \newcommand{\jh}{\widehat j}
 \newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
+\newcommand{\K}{\kappa}
 \newcommand{\dv}[1]{\vec #1\, '}
 \renewcommand{\d}[1]{#1'}
 \begin{document}
