SVCDE H2: Final version

--- a/YEAR2/SEM1/SVCDE/H2/homework.tex
+++ b/YEAR2/SEM1/SVCDE/H2/homework.tex
@@ -35,11 +35,13 @@
 \newcommand{\K}{\mathcal{K}}
 \newcommand{\dv}[1]{\vec #1\, '}
 \renewcommand{\d}[1]{#1'}
+\newenvironment{itpars}{\par\itshape}{\par}
+\newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
 \begin{document}
 \date{4th October 2020}
 \maketitle
 \section*{Problem 1}
-Since the plane $P$ is supposed to be parallel to the $yz$ plane, it
+Since the required plane $P$ is supposed to be parallel to the $yz$ plane, it
 has to have the form $x=a$ where $a\in\R$ is a constant.
 Additionally, both partial derivatives of $x$ need to be zero at the
 point $(a,b,c)$ that lies within the plane and the given surface.
@@ -65,24 +67,31 @@ To find $a$ we just need to evaluate $x$ for $y=b$ and $z=c$:
   a = x(b,c) = (-1)^2 - 4(-1)\frac{3}{2} - 2\left(\frac{3}{2}\right)^2
       + 8(-1) + 2\left(\frac{3}{2}\right) - 3 = - \frac{11}{2}. 
 \end{align*}
+Therefore the plane $P$ has the equation
+\begin{align*}
+  x = -\frac{11}{2}.
+\end{align*}
 \section*{Problem 2}
 Let $ z = \ln\frac{x^2}{1-y^3}$. Then the partial derivatives are
 \begin{align*}
   \frac{\p z}{\p x}
-  &=\frac{1-y^3}{x^2}\left(\frac{\p}{\p x}\frac{x^2}{1-y^3}\right)
-  =\frac{2x(1-y^3)}{x^2(1-y^3)}
-  =\frac{2}{x}, \text{ and}\\
+  &=\frac{1-y^3}{x^2}\left[\frac{\p}{\p x}\left(\frac{x^2}{1-y^3}\right)\right]\\
+  &=\frac{1-y^3}{x^2}\left[\frac{2x}{1-y^3}\right]\\
+  &=\frac{2x(1-y^3)}{x^2(1-y^3)}=\frac{2}{x}
+\end{align*}
+and
+\begin{align*}
   \frac{\p z}{\p y}
-  &=\frac{1-y^3}{x^2}\left(\frac{\p}{\p y}\frac{x^2}{1-y^3}\right)
-  =\frac{3x^2(1-y^3)y^2}{x^2(1-y^3)^2}
-  =\frac{3y^2}{1-y^3}.
+  &=\frac{1-y^3}{x^2}\left[\frac{\p}{\p y}\left( \frac{x^2}{1-y^3}\right)\right]\\
+  &=\frac{1-y^3}{x^2}\left[\frac{3x^2y^2}{(1-y^3)^2}\right]\\
+  &=\frac{3x^2(1-y^3)y^2}{x^2(1-y^3)^2} =\frac{3y^2}{1-y^3}.
 \end{align*}
 \section*{Problem 3}
 We are looking for the differential $dQ$ where
 \begin{align*}
   Q(p, \theta, R)=p^3\sin^2\theta R^{-2}.
 \end{align*}
-By definition, $dQ$ is
+By definition (cf. \emph{Notes, Section 2.4.3}), $dQ$ is
 \begin{align*}
   dQ=\frac{\p Q}{\p p}dp + \frac{\p Q}{\p\theta}d\theta + \frac{\p Q}{\p R}dR.
 \end{align*}
@@ -92,20 +101,23 @@ We find
   \frac{\p Q}{\p\theta}&= 2p^3R^{-2}\sin\theta\cos\theta,\\
   \frac{\p Q}{\p R}&=-2p^3\sin^2\theta R^{-3}.
 \end{align*}
-With $p=1$, $\theta=\nicefrac{\pi}{2}$, $R=10$, $dp=0.01$,
-$d\theta = 0.002$ and $dR=0.05$ we get
+Since $p=1$, $\theta=\nicefrac{\pi}{4}$, $R=10$, $dp=0.01$, we get
 \begin{align*}
-  \frac{\p Q}{\p p}dp&=0.015\cdot0.01 = 1.5\cdot 10^{-4},\\
-  \frac{\p Q}{\p\theta}d\theta&=0.01\cdot 0.002=2\cdot 10^{-5},\\
-  \frac{\p Q}{\p R}dR&=-0.001\cdot 0.05=5\cdot 10^{-5}.
+  \frac{\p Q}{\p p}(1, \nicefrac{\pi}{4}, 10)
+  &=3\cdot 1 \cdot \frac{1}{2} \cdot \frac{1}{100}=0.015,\\
+  \frac{\p Q}{\p\theta}(1, \nicefrac{\pi}{4}, 10)
+  &=2\cdot 1 \cdot \frac{1}{100}\cdot\frac{1}{\sqrt{2}}\cdot\frac{1}{\sqrt{2}} =0.01,\\
+  \frac{\p Q}{\p R}(1, \nicefrac{\pi}{4}, 10)
+  &= -2\cdot 1 \cdot \frac{1}{2}\frac{1}{1000}=-0.001.
 \end{align*}
+Additionally $dp = 0.01$, $d\theta = 0.002$ and $dR=0.05$.
 Therefore the maximum error may be estimated as
 \begin{align*}
-  dQ=1.5\cdot 10^{-4}+2\cdot 10^{-5} - 5\cdot10^{-5}=1.2\cdot10^{-4}.
+  dQ(1,\pi/4,10)=0.015\cdot 0.01+0.01\cdot 0.002  -0.001 \cdot 0.05=1.2\cdot10^{-4}.
 \end{align*}
-With a value of $Q(1,\pi/4,10)=5\cdot10^{-3}$ we therefore get a
+With a value of $Q(1,\nicefrac{\pi}{4},10)=5\cdot10^{-3}$ we therefore get a
 relative error of approximately 
 \begin{align*}
-  \frac{1.2\cdot10^{-4}}{5\cdot 10^{-3}}=2.4\%.
+  \frac{dQ(1,\nicefrac{\pi}{4},10)}{Q(1,\nicefrac{\pi}{4},10)}=\frac{2.7\cdot10^{-4}}{5\cdot 10^{-3}}=2.4\%.
 \end{align*}
 \end{document}
