--- a/YEAR2/SEM1/PRB/H1-prep/homework.tex
+++ b/YEAR2/SEM1/PRB/H1-prep/homework.tex
@@ -9,7 +9,7 @@
 \usepackage{changepage}
 \geometry{tmargin=2cm, bmargin=3cm}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\title{PRB: Workshop 1 Solutions}
+\title{PRB: Week 2 Solutions}
 \author{Franz Miltz (UNN: S1971811)}
 \newcommand*\lneg[1]{\overline{#1}}
 \newcommand{\R}{\mathbb{R}}
